--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -7,6 +7,6 @@ $brand-red: hsl(350, 79%, 58%);
 $brand-blue-light: hsl(217, 100%, 94%);
 $brand-grey: hsl(217, 31%, 72%);
 $brand-linear: hsl(216, 100%, 66%);
-$overlay: #040911;
+$overlay: rgba(4, 9, 17, 0.7);
 
 $header-height: 9rem;
