--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,13 +7,21 @@
 html {
   scroll-behavior: smooth;
   font-size: 62.5%;
+  height: 100vh;
+  position: relative;
 }
 
 body {
   font: 400 1.6rem "Poppins", sans-serif;
   background-color: #fafafa;
   -webkit-font-smoothing: antialiased;
-  overflow: hidden;
+}
+body.overlay {
+  overflow-y: hidden;
+}
+
+p {
+  word-break: break-all;
 }
 
 ul {
@@ -238,6 +246,15 @@ input::placeholder {
   gap: 1.8rem;
 }
 
+#room .section:nth-child(1) {
+  padding-bottom: 0;
+}
+#room .section:nth-child(2) {
+  padding-top: 0;
+}
+#room .section .content-form {
+  margin-bottom: 1.6rem;
+}
 #room .section .content-form form {
   width: 100%;
   height: 100%;
@@ -271,6 +288,107 @@ input::placeholder {
 }
 #room .section .content-form form .footer-form .button {
   width: 9.8rem;
+}
+#room .section .content-questions {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+#room .section .content-questions .question {
+  width: 100%;
+  height: 100%;
+  background-color: #e0ecff;
+  padding: 2.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  border-radius: 0 0.8rem 0.8rem 0.8rem;
+}
+#room .section .content-questions .question .description {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  gap: 1.6rem;
+}
+#room .section .content-questions .question .description p {
+  display: inline-flex;
+  align-items: center;
+  min-height: 5.2rem;
+}
+#room .section .content-questions .question .read-delete {
+  display: flex;
+  gap: 2.4rem;
+}
+#room .section .content-questions .question .read-delete .read,
+#room .section .content-questions .question .read-delete .delete {
+  display: flex;
+  gap: 0.8rem;
+  cursor: pointer;
+}
+#room .section .content-questions .question .read-delete .read img,
+#room .section .content-questions .question .read-delete .delete img {
+  max-width: 2.4rem;
+}
+#room .section .content-questions .question.read {
+  background-color: #eaecf2;
+}
+#room .section .content-questions .question.read .description svg circle {
+  fill: #a1b2cd;
+}
+#room .section .content-questions .question.read .read-delete .delete {
+  display: none;
+}
+
+.modal-container {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(4, 9, 17, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.modal-container .modal {
+  width: 59rem;
+  height: 36.2rem;
+  border-radius: 0.8rem;
+  background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-block: 6.4rem;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.modal-container .modal .title {
+  margin: 0;
+}
+.modal-container .modal form {
+  width: 30.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.modal-container .modal form input {
+  width: 100%;
+}
+.modal-container .modal form .buttons-modal {
+  display: flex;
+  gap: 0.8rem;
+}
+.modal-container .modal form .buttons-modal .button {
+  width: 100%;
+}
+.modal-container .modal form .buttons-modal .button:nth-child(1) {
+  background-color: #e5eaf1;
+  color: #4d5e77;
+}
+.modal-container .modal form .buttons-modal .button:nth-child(2) {
+  background-color: #e93f5b;
 }
 
 /*# sourceMappingURL=style.css.map */
