--- a/src/sass/pages/room.scss
+++ b/src/sass/pages/room.scss
@@ -1,6 +1,13 @@
 #room {
   .section {
+    &:nth-child(1) {
+      padding-bottom: 0;
+    }
+    &:nth-child(2) {
+      padding-top: 0;
+    }
     .content-form {
+      margin-bottom: 1.6rem;
       form {
         width: 100%;
         height: 100%;
@@ -37,9 +44,59 @@
       }
     }
     .content-questions {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
       .question {
-        
-    }
+        width: 100%;
+        height: 100%;
+        background-color: $brand-blue-light;
+        padding: 2.4rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        border-radius: 0 0.8rem 0.8rem 0.8rem;
+        .description {
+          width: 100%;
+          display: flex;
+          align-items: flex-start;
+          gap: 1.6rem;
+          p {
+            display: inline-flex;
+            align-items: center;
+            min-height: 5.2rem;
+          }
+        }
+        .read-delete {
+          display: flex;
+          gap: 2.4rem;
+          .read,
+          .delete {
+            display: flex;
+            gap: 0.8rem;
+            cursor: pointer;
+            img {
+              max-width: 2.4rem;
+            }
+          }
+        }
+        &.read {
+          background-color: #eaecf2;
+          .description {
+            svg {
+              circle {
+                fill: #a1b2cd;
+              }
+            }
+          }
+          .read-delete {
+            .delete {
+              display: none;
+            }
+          }
+        }
+      }
     }
   }
 }
